--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongose": "0.0.2-security"
+    "mongoose": "^5.8.11"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
